added test cases and schema
